--- a/index.html
+++ b/index.html
@@ -5,34 +5,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic Calculator with History</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/10.3.0/math.min.js"></script>
 </head>
+
 <body>
-    <div class="container">
-        <div class="calculator">
-            <input type="text" class="display" readonly>
-            <div class="buttons">
-    <button class="function" onclick="clearDisplay()">C</button>
-    <button class="number" onclick="appendNumber(7)">7</button>
-    <button class="number" onclick="appendNumber(8)">8</button>
-    <button class="number" onclick="appendNumber(9)">9</button>
-    <button class="operator" onclick="appendOperator('+')">+</button>
-    <button class="number" onclick="appendNumber(4)">4</button>
-    <button class="number" onclick="appendNumber(5)">5</button>
-    <button class="number" onclick="appendNumber(6)">6</button>
-    <button class="operator" onclick="appendOperator('-')">-</button>
-    <button class="number" onclick="appendNumber(1)">1</button>
-    <button class="number" onclick="appendNumber(2)">2</button>
-    <button class="number" onclick="appendNumber(3)">3</button>
-    <button class="operator" onclick="appendOperator('*')">*</button>
-    <button class="number" onclick="appendNumber(0)">0</button>
-    <button class="number decimal" onclick="appendDecimal()">.</button>
-    <button class="function" onclick="calculate()">=</button>
-    <button class="operator" onclick="appendOperator('/')">/</button>
-</div>
+    <div class="main-container">
+        <div class="container">
+            <div class="calculator">
+                <!-- ... (rest of the calculator code) ... -->
+                <input type="text" id="input-field" class="display" readonly>
+                <div class="buttons">
+                    <button class="function" onclick="clearDisplay()">C</button>
+                    <button class="number" onclick="appendNumber(7)">7</button>
+                    <button class="number" onclick="appendNumber(8)">8</button>
+                    <button class="number" onclick="appendNumber(9)">9</button>
+                    <button class="operator" onclick="appendOperator('+')">+</button>
+                    <button class="number" onclick="appendNumber(4)">4</button>
+                    <button class="number" onclick="appendNumber(5)">5</button>
+                    <button class="number" onclick="appendNumber(6)">6</button>
+                    <button class="operator" onclick="appendOperator('-')">-</button>
+                    <button class="number" onclick="appendNumber(1)">1</button>
+                    <button class="number" onclick="appendNumber(2)">2</button>
+                    <button class="number" onclick="appendNumber(3)">3</button>
+                    <button class="operator" onclick="appendOperator('*')">*</button>
+                    <button class="number" onclick="appendNumber(0)">0</button>
+                    <button class="number decimal" onclick="appendDecimal()">.</button>
+                    <button class="function" onclick="calculate()">=</button>
+                    <button class="operator" onclick="appendOperator('/')">/</button>
+                </div>
+            </div>
+            <div class="history-container">
+                <!-- ... (rest of the history-container code) ... -->
+                <div class="history">
+                    <h3>History</h3>
+                    <div class="history-list"></div>
+                    <div id="history-content" class="history-content"></div>
+                </div>
+            </div>
         </div>
-        <div class="history">
-            <h3>History</h3>
-            <div class="history-list"></div>
+        <div class="relative-difference-container">
+            <h2>Relative Difference</h2>
+            <div class="relative-difference">
+                <div class="input-container">
+                    <label for="original-value">Original Value:</label>
+                    <input type="number" id="original-value">
+                </div>
+                <div class="input-container">
+                    <label for="new-value">New Value:</label>
+                    <input type="number" id="new-value">
+                </div>
+                <button onclick="calculateRelativeDifference()">Calculate</button>
+                <div class="result">
+                    <span>Relative Difference: </span>
+                    <span id="relative-difference-result"></span>
+                </div>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
